--- a/footer.html
+++ b/footer.html
@@ -21,6 +21,10 @@
 					<a target="_blank" href="https://www.linkedin.com/in/feneljoseph" alt="Fenel Joseph - https://www.linkedin.com/in/feneljoseph" title="Fenel Joseph - https://www.linkedin.com/in/feneljoseph">
 						<i class="fa fa-linkedin-square fa-3x"></i><!--
 					--></a>&nbsp;&nbsp;
+
+					<a target="_blank" href="https://www.linkedin.com/in/feneljoseph" alt="Fenel Joseph - https://www.linkedin.com/in/feneljoseph" title="Fenel Joseph - https://www.linkedin.com/in/feneljoseph">
+						<i class="fa fa-github fa-3x"></i><!--
+					--></a>&nbsp;&nbsp;
 					
 					<a target="_blank" href="https://www.twitter.com/fenelj" alt="Fenel Joseph - https://www.twitter.com/fenelj" title="Fenel Joseph - https://www.twitter.com/fenelj">
 						<i class="fa fa-twitter-square fa-3x"></i><!--
