fixed links in footer

--- a/footer.html
+++ b/footer.html
@@ -22,7 +22,7 @@
 						<i class="fa fa-linkedin-square fa-3x"></i><!--
 					--></a>&nbsp;&nbsp;
 
-					<a target="_blank" href="https://www.linkedin.com/in/feneljoseph" alt="Fenel Joseph - https://www.linkedin.com/in/feneljoseph" title="Fenel Joseph - https://www.linkedin.com/in/feneljoseph">
+					<a target="_blank" href="https://github.com/feneljoseph" alt="Fenel Joseph - https://github.com/feneljoseph" title="Fenel Joseph - https://github.com/feneljoseph">
 						<i class="fa fa-github fa-3x"></i><!--
 					--></a>&nbsp;&nbsp;
 					
@@ -30,7 +30,7 @@
 						<i class="fa fa-twitter-square fa-3x"></i><!--
 					--></a>&nbsp;&nbsp;
 					
-					<a target="_blank" href="https://www.twitter.com/fenelj" alt="Fenel Joseph - https://plus.google.com/+FenelJoseph/" title="Fenel Joseph - https://www.twitter.com/fenelj">
+					<a target="_blank" href="https://plus.google.com/+FenelJoseph/" alt="Fenel Joseph - https://plus.google.com/+FenelJoseph/" title="Fenel Joseph - https://plus.google.com/+FenelJoseph/">
 						<i class="fa fa-google-plus-square fa-3x"></i><!--
 					--></a>
 
